// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Spinner > matches snapshot 1`] = `
<span
  class="spinner small "
  data-v-3e416633=""
/>
`;

exports[`Spinner matches snapshot 1`] = `
<span
  class="spinner small "
/>
`;
